--- a/.travis.yml
+++ b/.travis.yml
@@ -37,12 +37,11 @@ jobs:
         - cd ..
         - "git clone https://${TRAVIS_GITHUB_TOKEN}@github.com/hrsFire/Random-Image-Generator-Docs.git"
         - rm -rf Random-Image-Generator-Docs/generated/cukedoctor Random-Image-Generator-Docs/generated/walk_through_*.mp4
-	- ls -a
         - cp -r Random-Image-Generator-Tests/target/cukedoctor Random-Image-Generator-Docs/generated/
         - rm -rf Random-Image-Generator-Docs/generated/jmeter
         - cp -r Random-Image-Generator-Tests/target/jmeter/reports/performance* Random-Image-Generator-Docs/generated/jmeter
         - cd Random-Image-Generator-Docs/generated
-	- ls -a
+	- chmod +x ../../Random-Image-Generator-Tests/Cucumber/get_testingbot_video.py
         - python2 ../../Random-Image-Generator-Tests/Cucumber/get_testingbot_video.py
         - git add --all
         - git commit -am "update documentation"
