--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ jobs:
         - cd ..
         - "git clone https://${TRAVIS_GITHUB_TOKEN}@github.com/hrsFire/Random-Image-Generator-Docs.git"
         - rm -rf Random-Image-Generator-Docs/generated/cukedoctor Random-Image-Generator-Docs/generated/walk_through_*.mp4
-        - cp -r Random-Image-Generator-Tests/target/cukedoctor Random-Image-Generator-Docs/generated/
+        #- cp -r Random-Image-Generator-Tests/target/cukedoctor Random-Image-Generator-Docs/generated/
         - rm -rf Random-Image-Generator-Docs/generated/jmeter
         - cp -r Random-Image-Generator-Tests/target/jmeter/reports/performance* Random-Image-Generator-Docs/generated/jmeter
         - cd Random-Image-Generator-Docs/generated
