--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,13 @@ jobs:
         - cp .travis.settings.xml $HOME/.m2/settings.xml
       script:
         - mvn deploy
-    - stage: build web GUI
+    - stage: build Angular App
       script:
         - "git clone https://${TRAVIS_GITHUB_TOKEN}@github.com/hrsFire/Random-Image-Generator-Web-GUI.git"
+        - cd Random-Image-Generator-Web-GUI/
         - npm install
         - npm run-script postinstall
-    - stage: deploy web GUI to staging
+    - stage: deploy Angular App to staging
       before_deploy:
         - cd Random-Image-Generator-Web-GUI/
       deploy:
@@ -34,7 +35,7 @@ jobs:
         - git add --all
         - git commit -am "update documentation"
         - git push "https://${TRAVIS_GITHUB_TOKEN}@github.com/hrsFire/Random-Image-Generator-Docs.git" master
-    - stage: deploy to staging
+    - stage: deploy server to staging
       script: skip
       deploy: &heroku
         provider: heroku
@@ -57,12 +58,12 @@ jobs:
         - git add --all
         - git commit -am "update documentation"
         - git push "https://${TRAVIS_GITHUB_TOKEN}@github.com/hrsFire/Random-Image-Generator-Docs.git" master
-    - stage: deploy to production
+    - stage: deploy server to production
       script: skip
       deploy:
         <<: *heroku
         app: random-image-generator-api-fhv
-    - stage: deploy web GUI to production
+    - stage: deploy Angular App to production
       before_deploy:
         - cd Random-Image-Generator-Web-GUI/
       deploy:
