--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ jobs:
     - stage: deploy Angular App to staging
       before_deploy:
         - cd Random-Image-Generator-Web-GUI/
-      deploy:
+      deploy: &heroku
         provider: heroku
         api_key: $HEROKU_API_KEY
         app: random-image-generator-web-sta
