--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ jobs:
       before_deploy:
         - cd Random-Image-Generator-Web-GUI/
       deploy: &heroku
+        skip_cleanup: true
         provider: heroku
         api_key: $HEROKU_API_KEY
         app: random-image-generator-web-sta
