--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,12 @@ jobs:
         - cp .travis.settings.xml $HOME/.m2/settings.xml
       script:
         - mvn deploy
-    - stage: build Angular App
+    - stage: build & deploy Angular App to staging
       script:
         - "git clone https://${TRAVIS_GITHUB_TOKEN}@github.com/hrsFire/Random-Image-Generator-Web-GUI.git"
         - cd Random-Image-Generator-Web-GUI/
         - npm install
         - npm run-script postinstall
-    - stage: deploy Angular App to staging
-      before_deploy:
-        - cd Random-Image-Generator-Web-GUI/
       deploy: &heroku
         skip_cleanup: true
         provider: heroku
